--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0"
+        classpath 'com.android.tools.build:gradle:4.1.1'
         //Plugin to fin the lastest libraries version
         classpath "com.github.ben-manes:gradle-versions-plugin:0.34.0"
 
