--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        //External Repository
+        maven { url 'https://jitpack.io' }
     }
 }
 
