--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Build a number linked to the date to use as version.
+def YEAR_WEEK   = new Date().format("yyww").toInteger()
+def DAY         = new Date().format("u").toInteger()
+def HOUR_MINUTE = new Date().format("HHmm").toInteger()
+
+// The build time
+def BUILD_TIMESTAMP = 100000 * YEAR_WEEK + 10000 * DAY + HOUR_MINUTE
+// The build version
+def BUILD_VERSION = "version ${YEAR_WEEK}:${DAY}:${HOUR_MINUTE}"
+
 // Apply the versions plugin
 apply plugin: 'com.github.ben-manes.versions'
 
@@ -18,6 +28,14 @@ buildscript {
 }
 
 allprojects {
+
+    ext.buildTimestamp = BUILD_TIMESTAMP
+    ext.buildVersion = BUILD_VERSION
+
+    // Use the temp directory to build temporals
+    buildDir = "${System.env.TEMP}//gradle-build//${rootProject.name}//${project.name}"
+    logger.lifecycle("BuildDir: ${buildDir}")
+
     repositories {
         google()
         jcenter()
